my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ENMETH/ENMETH.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENMETH.dml:7:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENMETH.dml:13:8: error ENMETH: not a method: 'Bank('b', 'test')'
